Depense + check des points et sauvegarde en base
