# src/api/points/index.js
@@ -4,5 +4,6 @@ const wrap = require('co-express');
 const controller = require('./points');
 
 module.exports = {
-    earnPoints: wrap(controller.earnPoints)
+    earnPoints: wrap(controller.earnPoints),
+    checkPoints: wrap(controller.checkPoints)
 };
